# qttest

./: AutoCompleteDelegate.qml  CMakeLists.txt  DepartureScreen.qml  Home.qml  TimetableDelegate.qml  autocompletionhandler.cpp  autocompletionhandler.h  main.cpp  main.qml  requesthandler.cpp  requesthandler.h  sample_pine_bus.cfg  settings.h  timetablehandler.cpp  timetablehandler.h
include/: autocompletionhandler.h  timetablehandler.h
src/: main.cpp  settings.cpp
